install font using bower

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "ionicons": "~2.0.1",
     "moment": "~2.9.0",
     "requirejs": "~2.1.16",
-    "tablesort": "https://github.com/tristen/tablesort.git#v3.0.2"
+    "tablesort": "https://github.com/tristen/tablesort.git#v3.0.2",
+    "roboto-slab-fontface": "*"
   },
   "authors": [
     "Nils Schneider <nils@nilsschneider.net>"
