--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "moment": "~2.9.0",
     "requirejs": "~2.1.16",
     "tablesort": "https://github.com/tristen/tablesort.git#v3.0.2",
-    "roboto-slab-fontface": "*"
+    "roboto-slab-fontface": "*",
+    "es6-shim": "~0.27.1"
   },
   "authors": [
     "Nils Schneider <nils@nilsschneider.net>"
