--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "requirejs": "~2.1.16",
     "tablesort": "https://github.com/tristen/tablesort.git#v3.0.2",
     "roboto-slab-fontface": "*",
-    "es6-shim": "~0.27.1"
+    "es6-shim": "~0.27.1",
+    "almond": "~0.3.1",
+    "r.js": "~2.1.16"
   },
   "authors": [
     "Nils Schneider <nils@nilsschneider.net>"
