--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "has_location": false,
       "limit": false,
       "linkId": false,
+      "localStorageTest": false,
       "offline": false,
       "one": false,
       "online": false,
