--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "numeraljs": "~1.5.3",
     "roboto-fontface": "~0.3.0",
     "virtual-dom": "~2.0.1",
-    "leaflet-providers": "~1.0.27"
+    "leaflet-providers": "~1.0.27",
+    "rbush": "https://github.com/mourner/rbush.git#~1.3.5"
   },
   "authors": [
     "Nils Schneider <nils@nilsschneider.net>"
