--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^10.0.0"
+    "grunt-eslint": "^10.0.0",
+    "grunt-git-describe": "^2.3.2"
   },
   "eslintConfig": {
     "env": {
