--- a/config.json.example
+++ b/config.json.example
@@ -17,5 +17,11 @@
     {
       "name": "Stamen.TonerLite"
     }
+  ],
+  "siteNames": [
+    { "site": "ffhl", "name": "Lübeck" },
+    { "site": "ffeh", "name": "Entenhausen" },
+    { "site": "ffgt", "name": "Gothamcity" },
+    { "site": "ffal", "name": "Atlantis" }
   ]
 }
