[TASK] Add required information into package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "ffrgb-meshviewer",
+  "license": "AGPL",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ffrgb/meshviewer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ffrgb/meshviewer/issues"
+  },
   "scripts": {
     "test": "node -e \"require('grunt').cli()\" '' clean lint"
   },
