[TASK] Add cache breaker

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "^1.0.1",
     "grunt-bower-install-simple": "^1.2.3",
     "grunt-browser-sync": "^2.2.0",
+    "grunt-cache-breaker": "^2.0.1",
     "grunt-check-dependencies": "^0.12.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
