[TASK] Eslint - console.log replace error with warning Error stops build and log can be useful in development

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,4 +5,4 @@
 rules:
   "semi": ["error", "always"]
   "no-undef": 0
-  "no-console": ["error", { allow: ["warn", "error"] }]
+  "no-console": ["warn", { allow: ["warn", "error"] }]
