[TASK] Add nodeZoom level

--- a/config.json
+++ b/config.json
@@ -28,6 +28,7 @@
   "siteName": "Freifunk Regensburg",
   "showContact": false,
   "maxAge": 14,
+  "nodeZoom": 18,
   "mapLayers": [
     {
       "name": "OpenStreetMap.HOT",
