--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ sudo: false
 language: node_js
 
 node_js:
+  - "7"
   - "6"
-  - "5"
   - "4"
+
+os:
+  - linux
+  - macosx
+  - windows
 
 cache:
   directories:
