[TASK] Update to leaflet v1

--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "d3-force": "^1.0.6",
     "d3-selection": "^1.0.5",
     "d3-zoom": "^1.1.3",
-    "leaflet": "https://github.com/davojta/Leaflet.git#stable_0_7_7_1_release",
-    "leaflet-label": "^0.2.1-0",
+    "leaflet": "^1.0.3",
     "moment": "^2.17.1",
     "node-polyglot": "^2.2.2",
     "promise-polyfill": "^6.0.2",
