[TASK] Use yarn package manager in favour of npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,10 @@ os:
   - windows
 
 cache:
+  yarn: true
   directories:
     - node_modules
     - bower_components
-
-before_install:
-  - npm install -g grunt-cli
-
-install:
-  - npm install
 
 script: grunt
 
