--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffrgb-meshviewer",
-  "license": "AGPL",
+  "license": "AGPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ffrgb/meshviewer.git"
