--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "moment": "~2.17.1",
     "requirejs": "~2.3.2",
     "tablesort": "https://github.com/tristen/tablesort.git#v4.0.1",
-    "es6-shim": "~0.35.2",
+    "promise-polyfill": "^6.0.2",
     "almond": "~0.3.3",
     "d3": "~3.5.17",
     "virtual-dom": "~2.1.1",
