--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "almond": "^0.3.3",
     "chroma-js": "^1.2.1",
     "d3": "3.5",
-    "leaflet": "https://github.com/davojta/Leaflet.git#v0.7.7.1",
+    "leaflet": "https://github.com/davojta/Leaflet.git#stable_0_7_7_1_release",
     "leaflet-label": "^0.2.1-0",
     "moment": "^2.17.1",
     "promise-polyfill": "^6.0.2",
