[WIP][TASK] Add translations

--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "almond": "^0.3.3",
     "chroma-js": "^1.2.1",
     "d3": "3.5",
+    "grunt-json-minify": "^1.1.0",
     "leaflet": "https://github.com/davojta/Leaflet.git#stable_0_7_7_1_release",
     "leaflet-label": "^0.2.1-0",
     "moment": "^2.17.1",
+    "node-polyglot": "airbnb/polyglot.js",
     "promise-polyfill": "^6.0.2",
     "rbush": "1.4.3",
     "requirejs": "^2.3.2",
