--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "leaflet": "https://github.com/davojta/Leaflet.git#stable_0_7_7_1_release",
     "leaflet-label": "^0.2.1-0",
     "moment": "^2.17.1",
+    "node-polyglot": "airbnb/polyglot.js",
     "promise-polyfill": "^6.0.2",
     "rbush": "1.4.3",
     "requirejs": "^2.3.2",
