--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
   },
   "dependencies": {
     "almond": "^0.3.3",
+    "babel-eslint": "6.x",
     "chroma-js": "^1.2.1",
     "d3": "3.5",
+    "eslint-config-airbnb-es5": "^1.1.0",
+    "eslint-plugin-react": "^6.9.0",
     "leaflet": "https://github.com/davojta/Leaflet.git#stable_0_7_7_1_release",
     "leaflet-label": "^0.2.1-0",
     "moment": "^2.17.1",
