[TASK] Add cache breaker as variable and scss

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -5,3 +5,5 @@ rules:
   no-vendor-prefixes: 0
   # Needed for old 'display: -vendor-prefix-property' for higher browser-support
   no-duplicate-properties: 0
+  # Needed for unique-id()
+  empty-args: 0
