[TASK] Upgrade build tools

--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "test": "node -e \"require('grunt').cli()\" '' clean lint"
   },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
-    "eslint": "^3.14.0",
+    "autoprefixer": "^6.7.2",
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-es5": "^1.1.0",
     "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "grunt": "^1.0.1",
     "grunt-browser-sync": "^2.2.0",
     "grunt-cache-breaker": "^2.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-htmlmin": "^2.1.0",
+    "grunt-contrib-htmlmin": "^2.2.0",
     "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "^19.0.0",
@@ -40,15 +43,12 @@
   },
   "dependencies": {
     "almond": "^0.3.3",
-    "babel-eslint": "6.x",
     "chroma-js": "^1.2.1",
     "d3": "3.5",
-    "eslint-config-airbnb-es5": "^1.1.0",
-    "eslint-plugin-react": "^6.9.0",
     "leaflet": "https://github.com/davojta/Leaflet.git#stable_0_7_7_1_release",
     "leaflet-label": "^0.2.1-0",
     "moment": "^2.17.1",
-    "node-polyglot": "airbnb/polyglot.js",
+    "node-polyglot": "^2.2.2",
     "promise-polyfill": "^6.0.2",
     "rbush": "1.4.3",
     "requirejs": "^2.3.2",
