--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "promise-polyfill": "^6.0.2",
     "rbush": "^2.0.1",
     "requirejs": "^2.3.2",
-    "virtual-dom": "^2.1.1"
+    "snabbdom": "^0.6.4"
   }
 }
