[TASK] Use forked grunt-inline for updated dependencys

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "^19.0.0",
-    "grunt-inline": "^0.3.6",
+    "grunt-inline": "https://github.com/xf-/grunt-inline.git",
     "grunt-json-minify": "^1.1.0",
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^2.0.0",
