--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "d3-zoom": "^1.1.3",
     "leaflet": "^1.0.3",
     "moment": "^2.17.1",
+    "navigo": "^4.6.0",
     "node-polyglot": "^2.2.2",
     "promise-polyfill": "^6.0.2",
     "rbush": "^2.0.1",
