--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
-// Grunt will remove all comments
+// Gulp will remove all comments
 {
   // Variables are NODE_ID and NODE_NAME (only a-z0-9\- other chars are replaced with _)
   "nodeInfos": [
@@ -128,5 +128,5 @@
     "fr",
     "ru"
   ],
-  "cacheBreaker": "vy0zx"
+  "cacheBreaker": "<!-- inject:cache-breaker -->"
 }
