--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-jsonminify": "^1.0.0",
     "gulp-kyh-inline-source": "^3.0.2",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-real-favicon": "^0.2.2",
     "gulp-requirejs-optimize": "^1.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.2",
