--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache-bust": "^1.1.0",
+    "gulp-cli": "^1.3.0",
     "gulp-environments": "^0.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
