--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 language: node_js
 
 node_js:
-  - "8"
+  - "9"
 
 os:
   - linux
@@ -13,9 +13,11 @@ os:
 
 matrix:
   include:
-  - node_js: 8
+  - node_js: 9
     os: linux
     env: USE_NPM=true
+  - node_js: 8
+    os: linux
   - node_js: 6
     os: linux
 
